feat: added crud operation for notes
