# routes/users.js
@@ -4,7 +4,10 @@
  * @author        : Rekha Patil
 */
 const controller = require('../controllers/user')
-const { verifyingToken } = require('../utility/validation')
+const  { verifyingToken }  = require('../utility/validation')
+const noteController = require('../controllers/note');
+
+
 
 module.exports = (app) => {
   app.post('/registration', controller.create)
@@ -14,4 +17,13 @@ module.exports = (app) => {
   app.post('/forgotPassword', controller.forgotPassword)
 
   app.put('/resetPassword', controller.resetPassword)
+
+  app.post('/notesCreate', verifyingToken, noteController.createNote);
+
+  app.put('/notes/:noteId', verifyingToken, noteController.updateNote);
+
+  app.get('/notesAll', verifyingToken,  noteController.getAllNotes);
+
+  app.delete('/deleteNotes/:noteId', verifyingToken, noteController.deleteNote);
+
 }
