# swagger/swagger.json
@@ -159,6 +159,129 @@
                     }
                 }
             }
+        },
+        "/notesCreate": {
+            "post": {
+                "tags": [
+                    "FundooNotes"
+                ],
+                "summary": "Create notes in FundooNotes",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "craete note"
+                    },
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "an authorization token",
+                        "required": true
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "note created successfully"
+                    },
+                    "400": {
+                        "description": "failed to create note"
+                    }
+                }
+            },
+            "notesAll": {
+                "tags": [
+                    "FundooNotes"
+                ],
+                "summary": "Get all notes from FundooNotes",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "an authorization token",
+                        "required": true
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "got all notes successfully"
+                    },
+                    "400": {
+                        "description": "failed to get notes"
+                    }
+                }
+            }
+        },
+        "/notes/{:noteId}":{
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "description": "ID of the person that we want to see",
+                    "type":"string"
+                }
+            ],
+            "put": {
+                "tags": [
+                    "FundooNotes"
+                ],
+                "summary": "Update note in FundooNotes",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "update an existing note"
+                    },
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "an authorization token",
+                        "required": true
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "updated note successfully"
+                    },
+                    "400": {
+                        "description": "failed to update note"
+                    }
+                }
+            },
+            "deleteNotes/:noteId": {
+                "tags": [
+                    "FundooNotes"
+                ],
+                "summary": "delete note from FundooNotes and change the value of trash to true",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "token",
+                        "description": "an authorization token",
+                        "required": true
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "deleted note successfully"
+                    },
+                    "400": {
+                        "description": "failed to delete notes"
+                    }
+                }
+            }
         }
     },
         "definitions": {
